Added icons into website

--- a/landing_page.html
+++ b/landing_page.html
@@ -34,19 +34,33 @@
 
         </div>
 
-        <div id="about_me" class="card rounded-lg center2 max-w-xl">
+        <div id="about_me" class="card rounded-lg center2 max-w-3xl border border-gray-200 shadow-sm">
             <div class="text-4xl font-extrabold text-center pb-20">
                 About me
             </div>
 
             <div class="text-center">
-                I am a undergraduate graduated from university of california santa cruz who have enthusiasm in machine learning and operating system.
-                I have 
+                Hi I am Thomas, and I am a undergraduate graduated from university of california santa cruz who have enthusiasm in machine learning and operating system.
+                I have experiance in 
                 I am currently instrested in an adventure in a company.
             </div>
 
-            <div>
-
+            <div class="pt-8 pb-4 justify-center flex gap-x-5 flex-shrink-0">
+                <div class="border rounded-lg w-10">
+                    <a href="https://github.com/TheSpartanBuilder" class="button">
+                        <img src="image/github.png">
+                    </a>
+                </div>
+                <div class="border rounded-lg w-10">
+                    <a href="" class="button">
+                        <img src="image/linkedin-logo-linkedin-icon-transparent-free-png.webp">
+                    </a>
+                </div>
+                <div class="border rounded-lg w-10">
+                    <a href="" class="button">
+                        <img src="image/portable-network-graphics-logo-vector-graphics-graphic-design-png-favpng-5wCajMHRHaUEErhMSqC4HZ6MQ.jpg" class="pt-1.5">
+                    </a>
+                </div>
             </div>
         </div>
     </body>
