Added one project to the website

--- a/landing_page.html
+++ b/landing_page.html
@@ -30,12 +30,12 @@
         </div>
 
         <!-- Spacer -->
-        <div class="p-60">
+        <div class="p-20">
 
         </div>
 
         <div id="about_me" class="card rounded-lg center2 max-w-3xl border border-gray-200 shadow-sm">
-            <div class="text-4xl font-extrabold text-center pb-20">
+            <div class="text-4xl font-extrabold text-center pb-10 pt-5">
                 About me
             </div>
 
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div class="border rounded-lg w-10">
-                    <a href="" class="button">
+                    <a href="https://www.linkedin.com/in/thomas-wong-3b989a36b/" class="button">
                         <img src="image/linkedin-logo-linkedin-icon-transparent-free-png.webp">
                     </a>
                 </div>
@@ -62,6 +62,48 @@
                     </a>
                 </div>
             </div>
+        </div>
+
+        <div class="pt-30 max-w-5xl center2">
+            <div class="rounded-lg border border-gray-200 shadow-sm">
+                <div class="text-4xl font-extrabold text-center pb-20 pt-5">Projects</div>
+
+                    <!-- Projects -->
+
+                    <div class="p-5">
+                        <div class="rounded-lg border border-gray-200 shadow-sm max-w-md">
+                            <div class="text-xl font-extrabold text-center">
+                                Lost@Cruz
+                            </div>
+
+                            <div class="p-3">
+                                <img src="image/lost_at_cruz.png" class="rounded-lg">
+                            </div>
+
+                            <div class="p-3">
+                                Lost at Cruz is a website that helps UCSC students find 
+                                their lost items by connecting finders and losers through 
+                                the platform. 
+                                <br>
+                                <br>
+                                Lost at Cruz provides a platform for users to post items 
+                                they have found or lost. Users who have reported a lost 
+                                item receive daily notifications about recently found 
+                                items that may match theirs.
+                                <br>
+                                <br>
+                                Lost at Cruz is built with React using the Next.js 
+                                framework for the frontend. For the backend, we use 
+                                Firebase for database management and authentication. 
+                                Finally, the website is hosted on Vercel.
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+        <div class="p-20">
+
         </div>
     </body>
 </html>
