--- a/landing_page.html
+++ b/landing_page.html
@@ -30,12 +30,12 @@
         </div>
 
         <!-- Spacer -->
-        <div class="p-20">
+        <div class="p-1">
 
         </div>
 
-        <div id="about_me" class="card rounded-lg center2 max-w-3xl border border-gray-200 shadow-sm">
-            <div class="text-4xl font-extrabold text-center pb-10 pt-5">
+        <div id="about_me" class="card rounded-lg center2 max-w-3xl border border-gray-200 shadow-xl">
+            <div class="text-4xl font-extrabold text-center pb-3 pt-5">
                 About me
             </div>
 
@@ -45,7 +45,7 @@
                 I’m currently seeking an exciting opportunity to grow and contribute within a company.
             </div>
 
-            <div class="pt-8 pb-4 justify-center flex gap-x-5 flex-shrink-0">
+            <div class="pb-4 justify-center flex gap-x-5 flex-shrink-0">
                 <div class="border rounded-lg w-10">
                     <a href="https://github.com/TheSpartanBuilder" class="button">
                         <img src="image/github.png">
@@ -64,15 +64,15 @@
             </div>
         </div>
 
-        <div class="pt-30 max-w-5xl center2">
-            <div class="rounded-lg border border-gray-200 shadow-sm">
-                <div class="text-4xl font-extrabold text-center pb-20 pt-5">Projects</div>
+        <div class="pt-18 max-w-5xl center2">
+            <div class="rounded-lg border border-gray-200 shadow-xl">
+                <div class="text-4xl font-extrabold text-center pb-1 pt-5">Projects</div>
 
                     <!-- Projects -->
 
                     <div class="p-5">
                         <a href="https://github.com/hamza-bassal/lost-cruz" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-sm flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Lost@Cruz
@@ -108,7 +108,7 @@
 
                     <div class="p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE_144_Final_Project/tree/Submission" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-sm flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Object Classification Model
@@ -133,7 +133,7 @@
 
                     <div class="p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE130/tree/main/asgn4" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-sm flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         HTTP server
@@ -151,7 +151,8 @@
                                    pool and ensures safe access to files through 
                                    proper synchronization mechanisms.
                                    <br><br>
-                                   If you want to take a look at the project feel free to reach out to me.
+                                   If you want to take a look at the project feel 
+                                   free to reach out to me.
                                 </div>
                             </div>
                         </a>
@@ -162,7 +163,7 @@
 
                     <div class="p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE130/tree/main/asgn4" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-sm flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Web Crawler
@@ -182,6 +183,9 @@
                                    into a specified directory. Each page is 
                                    saved with a unique ID, and already visited 
                                    URLs are skipped to avoid revisiting. 
+                                   <br><br>
+                                   If you want to take a look at the project feel 
+                                   free to reach out to me.
                                 </div>
                             </div>
                         </a>
@@ -192,7 +196,7 @@
 
                     <div class="p-5">
                         <a href="https://thespartanbuilder.github.io/CSE160/assignment%202/src/BlockyAnimal.html" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-sm flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Tom
