Small edit to formating

--- a/landing_page.html
+++ b/landing_page.html
@@ -40,9 +40,14 @@
             </div>
 
             <div class="flex items-center justify-center p-5">
-                Hi, I’m Thomas. I am an undergraduate from the University of California, Santa Cruz, with a strong enthusiasm for machine learning and operating systems.
-                I have experience with C, C++, Python, PyTorch, HTML, and JavaScript.
-                I’m currently seeking an exciting opportunity to grow and contribute within a company.
+                Hi, I’m Thomas. I am an undergraduate from the 
+                University of California, Santa Cruz, with a 
+                strong enthusiasm for machine learning and 
+                operating systems.
+                I have experience with C, C++, Python, PyTorch, 
+                HTML, and JavaScript.
+                I’m currently seeking an exciting opportunity 
+                to grow and contribute within a company.
             </div>
 
             <div class="pb-4 justify-center flex gap-x-5 flex-shrink-0">
