--- a/landing_page.html
+++ b/landing_page.html
@@ -22,7 +22,7 @@
                 </div>
                 <div id="spacer" class="p-3"></div>
                 <div id="picture">
-                    <img src="image/IMG_7876.png" alt="Image of Thomas Wong" class="w-70 center2 object-contain rounded-lg">
+                    <img src="image/IMG_7876.png" alt="Image of Thomas Wong" class="w-70 center2 object-contain rounded-lg bg-white">
                 </div>
                 <!-- Image -->
                 <!-- https://www.w3schools.com/howto/howto_css_blurred_background.asp -->
