--- a/landing_page.html
+++ b/landing_page.html
@@ -75,7 +75,7 @@
 
                     <!-- Projects -->
 
-                    <div class="p-5">
+                    <div class="select_movement p-5">
                         <a href="https://github.com/hamza-bassal/lost-cruz" class="button">
                             <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
@@ -111,7 +111,7 @@
 
 
 
-                    <div class="p-5">
+                    <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE_144_Final_Project/tree/Submission" class="button">
                             <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
@@ -136,7 +136,7 @@
 
 
 
-                    <div class="p-5">
+                    <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE130/tree/main/asgn4" class="button">
                             <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
@@ -166,7 +166,7 @@
 
 
 
-                    <div class="p-5">
+                    <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE13s/tree/main/asgn6" class="button">
                             <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
@@ -199,7 +199,7 @@
 
 
 
-                    <div class="p-5">
+                    <div class="select_movement p-5">
                         <a href="https://thespartanbuilder.github.io/CSE160/assignment%202/src/BlockyAnimal.html" class="button">
                             <div class="rounded-lg border border-gray-200 shadow-xl flex">
                                 <div class="p-5 w-1/3">
