--- a/landing_page.html
+++ b/landing_page.html
@@ -17,7 +17,7 @@
         <script src="landing_page.js"></script>
         <div class="card name_n_image">
             <div id="name_n_picture">
-                <div id="name" class="text-5xl text-center pt-25">
+                <div id="name" class="text-5xl text-center pt-25 font-extrabold">
                     Thomas Wong
                 </div>
                 <div id="spacer" class="p-3"></div>
@@ -51,17 +51,17 @@
             </div>
 
             <div class="pb-4 justify-center flex gap-x-5 flex-shrink-0">
-                <div class="border rounded-lg w-10">
+                <div class="select_movement border rounded-lg w-10 border-gray-200 shadow-lg hover:shadow-2lg">
                     <a href="https://github.com/TheSpartanBuilder" class="button">
                         <img src="image/github.png">
                     </a>
                 </div>
-                <div class="border rounded-lg w-10">
+                <div class="select_movement border rounded-lg w-10 border-gray-200 shadow-lg hover:shadow-2lg">
                     <a href="https://www.linkedin.com/in/thomas-wong-3b989a36b/" class="button">
                         <img src="image/linkedin-logo-linkedin-icon-transparent-free-png.webp">
                     </a>
                 </div>
-                <div class="border rounded-lg w-10">
+                <div class="select_movement border rounded-lg w-10 border-gray-200 shadow-lg hover:shadow-2lg">
                     <a href="" class="button">
                         <img src="image/portable-network-graphics-logo-vector-graphics-graphic-design-png-favpng-5wCajMHRHaUEErhMSqC4HZ6MQ.jpg" class="pt-1.5">
                     </a>
@@ -77,7 +77,7 @@
 
                     <div class="select_movement p-5">
                         <a href="https://github.com/hamza-bassal/lost-cruz" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex hover:shadow-2xls">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Lost@Cruz
@@ -113,7 +113,7 @@
 
                     <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE_144_Final_Project/tree/Submission" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex hover:shadow-2xl">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Object Classification Model
@@ -138,7 +138,7 @@
 
                     <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE130/tree/main/asgn4" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex hover:shadow-2xl">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         HTTP server
@@ -168,7 +168,7 @@
 
                     <div class="select_movement p-5">
                         <a href="https://github.com/TheSpartanBuilder/CSE13s/tree/main/asgn6" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex hover:shadow-2xl">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Web Crawler
@@ -201,7 +201,7 @@
 
                     <div class="select_movement p-5">
                         <a href="https://thespartanbuilder.github.io/CSE160/assignment%202/src/BlockyAnimal.html" class="button">
-                            <div class="rounded-lg border border-gray-200 shadow-xl flex">
+                            <div class="rounded-lg border border-gray-200 shadow-xl flex hover:shadow-2xl">
                                 <div class="p-5 w-1/3">
                                     <div class="text-xl font-extrabold text-center">
                                         Tom
